@@ -1,13 +1,13 @@
 <html>
   <head>
-    <title>The Official FVWM Homepage - Icons</title>
+    <title>The Official FVWM Homepage - Icons and Sounds</title>
   </head>
   <body BACKGROUND="black-stone1.jpg"
     bgcolor="#000000" text="#ffffff"
     link="#FFFF88" vlink="#EEDDDD" alink="#ff0000">
     <center>
       <h1><font color="pink">
-	  The Official FVWM Homepage - Icons Download</font></h1>
+	  The Official FVWM Homepage - Icons and Sounds</font></h1>
     </center>
     The icons that used to be part of the fvwm source distribution are
 now accessible separately.
@@ -29,6 +29,25 @@ now accessible separately.
       <li>View the <a href="http:generated/icon_shots/mini2.gif">
 	  button and mini</a> pixmaps (part 2).
     </ul>
+    Now we provide a few sounds in .au format for FvwmEvent.
+    <ul>
+    <li><a href="ftp:generated/sounds_download/fvwm_sounds.tgz">
+	  Download</a> Fvwm Sounds tgz format.  Make a directory
+	to hold the sounds, say /usr(/local/)share/sounds/fvwm, and unpack the
+	"tgz" ball in this directory.
+      <li>  <a href="http:sounds/clong.au">
+	  clong.au</a> can be used for (de)iconify events.
+      <li><a href="http:sounds/gong.au">
+	  gong.au</a> can be used at FvwmEvent startup.
+      <li><a href="http:sounds/pook.au">
+	  pook.au</a> can be used for destroy_window events.
+      <li><a href="http:sounds/slide.au">
+	  slide.au</a> can be used for (de)windowshade, new_page, new_desk 
+	events.
+      <li><a href="http:sounds/wipe.au">
+	  wipe.au</a> can be used for add_window events.
+    </ul>
+    
 
     <hr>
 
