@@ -42,7 +42,7 @@ for the X Window system.
   <li><a href="vector-buttons/vector-buttons.html">Vector Buttons</a>
   <li><a href="generated/manpages/man-pages.html">Manual Pages</a>
   <li><a href="links.html">Links</a>
-  <li><a href="icons.html">Icon Download</a>
+  <li><a href="icons.html">Icons and Sounds Download</a>
   <li><a href="mailinglist.html">Mailing List Info</a>
   <li><a href="http://www.hpc.uh.edu/fvwm/archive">Mailing List Archive</a>
   <li><a href="http://yyy.fvwm.org/cgi-bin/fvwm-bug">FVWM Bug Reporting</a>
@@ -54,7 +54,7 @@ for the X Window system.
 Created: Jan 31, 1996
 <!-- Created: Thu Jul  1 22:03:12 EDT 1999 -->
 <!-- hhmts start -->
-Last modified: Tue Nov 30 10:08:30 CET 1999
+Last modified: Fri Mar 31 06:08:41 CEST 2000
 <!-- hhmts end -->
 </body>
 </html>
