@@ -1,3 +1,10 @@
+2000-03-31  olicha <olivier.chapuis@free.fr>
+
+	* index.html:
+	* icons.html:
+	* sounds/*:
+	Added some sounds distribution
+	
 2000-03-29  Hippo
 
 	* mod_f2m_communication.html: Brought up to date with CVS fvwm.
